Correção bug entidade
